testcases/negative/no_hardcoded_secret.js
const apiKey = process.env.API_KEY;
const token = getTokenFromVault();
